--- a/configs/reporter/csv_reporter.yaml
+++ b/configs/reporter/csv_reporter.yaml
@@ -1,6 +1,6 @@
 _target_: src.utils.reporting.csv_reporter.CSVReporter
 
-output_dir: ${db_root}
+output_dir: ${work_dir}/output_csv
 research_name: ${name}
 dataset_name: ${dataset.dataset_name}
 postfix: ""
